Initial project files
This is my portfolio version 2 project in my app academy class. It uses languages such as HTML and CSS to create a website.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,38 @@
 	</head>
 
 	<body>
+	<div class="container">
+		<div class="row">			
+			<div class="about-me">
+				<p class="title">
+					<h1>Blake Dayman</h1>
+				</p>
+			</div>
+		</div>
+		<div class="col-xs-2">
+			<nav class="list-group">
+				<a class="list-group-item" href="index.html">Intro</a>
+				<a class="list-group-item" href="aboutme.html">About me</a>
+				<a class="list-group-item" href="projects.html">Projects</a>
+			</nav>
+		</div>
+	
+		<div class="col-xs-10 place">
+		
 
+		<div class="col-xs-12 about-me">
+			<p class="title">
+				<h1>Contact me</h1>
+			</p>
+		</div>
+		<div>
+			<p class="text2">
+				phone: (626)434-5047<br>
+				Adress: 1140 coronet ave Pasadena CA
+			</p>
+		</div>
+
+		</div>
 	</body>
 
 </html>
