Initial project files
This is my portfolio version 2 project in my app academy class. It uses languages such as HTML and CSS to create a website.

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,11 +1,14 @@
 <!DOCTYPE <!DOCTYPE html>
 <html>
 <head>
+	<!-- bootstrap -->
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<!-- google fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Shojumaru' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+	<!-- Stylesheets -->
 	<link rel="stylesheet" type="text/css" href="css/custom-style.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<title>About Me</title>
@@ -19,6 +22,7 @@
 				</p>
 			</div>
 		</div>
+		<!-- Navigation Links -->
 		<div class="col-xs-2">
 			<nav class="list-group">
 				<a class="list-group-item" href="index.html">Intro</a>
@@ -46,14 +50,14 @@
 			Hi my name is Blake Dayman. Im a member of the App Academy at Pasadena High School. When I grow up I want to be a computer programmer. To achieve this goal I plan on going to college at Claremont Mckenna. Some of my interests that I like to do is play videogames and watch Anime. I also play tennis as a sport and even play the electric bass as a instrument. I hope you like my work and would be open for any requests about work!  
 		</p>
 		</div>
-		<div class="col-xs-4">
+		<div class="col-xs-4"> <!-- anime picture -->
 			<img src="http://img1.wikia.nocookie.net/__cb20130413211558/deadmanwonderland/de/images/thumb/4/4b/Deadman_Gruppe.jpg/670px-Deadman_Gruppe.jpg" width="420" height="400">
 		</div>
 
-		<div class="col-xs-4">
+		<div class="col-xs-4"> <!-- videogame picture -->
 			<img src="http://static.comicvine.com/uploads/original/11115/111150557/3763220-borderlands_2_wallpaper_v2_by_ajle9550-d6xfumh.jpg" width="420" height="400">
 		</div>
-		<div class="col-xs-4">
+		<div class="col-xs-4"> <!-- Bass Instrument picture -->
 			<img src="http://www.hdwallpapers.in/walls/guitor_abstract-normal.jpg" width="420" height="400">
 		</div>
 	</div>
