--- a/aboutme.html
+++ b/aboutme.html
@@ -11,6 +11,8 @@
 	<!-- Stylesheets -->
 	<link rel="stylesheet" type="text/css" href="css/custom-style.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<!-- mediaquery -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>About Me</title>
 </head>
 <body>
