--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html class="red">
 	<head>
+		<!-- bootstrap -->
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<!-- google fonts -->
 		<link href='http://fonts.googleapis.com/css?family=Shojumaru' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<!-- Stylesheets -->
 		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<!-- mediaquery -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 		<title>
 			Blakes portfolio v2
 		</title>
