--- a/projects.html
+++ b/projects.html
@@ -1,13 +1,18 @@
 <!DOCTYPE <!DOCTYPE html>
 <html>
 <head>
+	<!-- bootstrap -->
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<!-- google fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Shojumaru' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+	<!-- Stylesheets -->
 	<link rel="stylesheet" type="text/css" href="css/custom-style.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<!-- mediaquery -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Projects</title>
 </head>
 <body>
@@ -19,6 +24,7 @@
 			</p>
 		</div>
 	</div>
+	<!-- Navigation Links -->
 	<div class="col-xs-2">
 		<nav class="list-group">
 			<a class="list-group-item" href="index.html">Intro</a>
@@ -26,7 +32,6 @@
 			<a class="list-group-item" href="projects.html">Projects</a>
 		</nav>
 	</div>
-	
 	<div class="col-xs-10 about-me">
 		<p class="title">
 			<h1>Contact me</h1>
@@ -38,7 +43,6 @@
 			</p>
 		</div>		
 	</div>
-
 	<div class="col-xs-12 about-me">
 		<p class="title">
 			<h1>Projects</h1>
@@ -49,7 +53,5 @@
 		</p>
 	</div>		
 	</div>
-
-
 </body>
 </html>>
