--- a/aboutme.html
+++ b/aboutme.html
@@ -51,14 +51,14 @@
 			Hi my name is Blake Dayman. Im a member of the App Academy at Pasadena High School. When I grow up I want to be a computer programmer. To achieve this goal I plan on going to college at Claremont Mckenna. Some of my interests that I like to do is play videogames and watch Anime. I also play tennis as a sport and even play the electric bass as a instrument. I hope you like my work and would be open for any requests about work!  
 		</p>
 		</div>
-		<div class="col-xs-4"> <!-- anime picture -->
+		<div class="col-xs-4 anime"> <!-- anime picture -->
 			<img src="http://img1.wikia.nocookie.net/__cb20130413211558/deadmanwonderland/de/images/thumb/4/4b/Deadman_Gruppe.jpg/670px-Deadman_Gruppe.jpg" width="420" height="400">
 		</div>
 
-		<div class="col-xs-4"> <!-- videogame picture -->
+		<div class="col-xs-4 borderlands"> <!-- videogame picture -->
 			<img src="http://static.comicvine.com/uploads/original/11115/111150557/3763220-borderlands_2_wallpaper_v2_by_ajle9550-d6xfumh.jpg" width="420" height="400">
 		</div>
-		<div class="col-xs-4"> <!-- Bass Instrument picture -->
+		<div class="col-xs-4 bass"> <!-- Bass Instrument picture -->
 			<img src="http://www.hdwallpapers.in/walls/guitor_abstract-normal.jpg" width="420" height="400">
 		</div>
 	</div>
