Initial project files
This is my portfolio version 2 project in my app academy class. It uses languages such as HTML and CSS to create a website.

--- a/projects.html
+++ b/projects.html
@@ -38,8 +38,8 @@
 		</p>
 		<div>
 			<p class="text2">
-				phone: (626)434-5047 <br>
-				Adress: 1140 coronet ave Pasadena CA
+				Phone: (626)434-5047 <br>
+				Address: 1140 coronet ave Pasadena CA
 			</p>
 		</div>		
 	</div>
