--- a/aboutme.html
+++ b/aboutme.html
@@ -37,8 +37,8 @@
 			</p>
 			<div>
 				<p class="text2">
-					phone: (626)434-5047<br>
-					Adress: 1140 coronet ave Pasadena CA
+					Phone: (626)434-5047<br>
+					Address: 1140 coronet ave Pasadena CA
 				</p>
 			</div>		
 		</div>
