--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 <head>
 	<!-- bootstrap -->
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<!-- google fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Shojumaru' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
@@ -56,11 +56,40 @@
 		</div>
 
 		<div class="col-xs-4 borderlands"> <!-- videogame picture -->
-			<img src="http://static.comicvine.com/uploads/original/11115/111150557/3763220-borderlands_2_wallpaper_v2_by_ajle9550-d6xfumh.jpg" width="420" height="400">
+			<img src="borderlands.jpg" width="450" height="400">
 		</div>
 		<div class="col-xs-4 bass"> <!-- Bass Instrument picture -->
 			<img src="http://www.hdwallpapers.in/walls/guitor_abstract-normal.jpg" width="420" height="400">
 		</div>
+		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="http://img1.wikia.nocookie.net/__cb20130413211558/deadmanwonderland/de/images/thumb/4/4b/Deadman_Gruppe.jpg/670px-Deadman_Gruppe.jpg" alt="anime">
+    </div>
+    <div class="item">
+      <img src="borderlands.jpg" alt="videogame">
+    </div>
+    <div class="item">
+      <img src="http://www.hdwallpapers.in/walls/guitor_abstract-normal.jpg" alt="bass">
+    </div>
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
 	</div>
 </body>
 </html>>
