--- a/aboutme.html
+++ b/aboutme.html
@@ -51,36 +51,26 @@
 			Hi my name is Blake Dayman. Im a member of the App Academy at Pasadena High School. When I grow up I want to be a computer programmer. To achieve this goal I plan on going to college at Claremont Mckenna. Some of my interests that I like to do is play videogames and watch Anime. I also play tennis as a sport and even play the electric bass as a instrument. I hope you like my work and would be open for any requests about work!  
 		</p>
 		</div>
-		<div class="col-xs-4 anime"> <!-- anime picture -->
-			<img src="http://img1.wikia.nocookie.net/__cb20130413211558/deadmanwonderland/de/images/thumb/4/4b/Deadman_Gruppe.jpg/670px-Deadman_Gruppe.jpg" width="420" height="400">
-		</div>
-
-		<div class="col-xs-4 borderlands"> <!-- videogame picture -->
-			<img src="borderlands.jpg" width="450" height="400">
-		</div>
-		<div class="col-xs-4 bass"> <!-- Bass Instrument picture -->
-			<img src="http://www.hdwallpapers.in/walls/guitor_abstract-normal.jpg" width="420" height="400">
-		</div>
 		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
+ 		<!-- Indicators -->
+  		<ol class="carousel-indicators">
+    		<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    		<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    		<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  		</ol>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="item active">
-      <img src="http://img1.wikia.nocookie.net/__cb20130413211558/deadmanwonderland/de/images/thumb/4/4b/Deadman_Gruppe.jpg/670px-Deadman_Gruppe.jpg" alt="anime">
-    </div>
-    <div class="item">
-      <img src="borderlands.jpg" alt="videogame">
-    </div>
-    <div class="item">
-      <img src="http://www.hdwallpapers.in/walls/guitor_abstract-normal.jpg" alt="bass">
-    </div>
-  </div>
+  		<!-- Wrapper for slides -->
+  		<div class="carousel-inner">
+    		<div class="item active">
+      			<img src="http://img1.wikia.nocookie.net/__cb20130413211558/deadmanwonderland/de/images/thumb/4/4b/Deadman_Gruppe.jpg/670px-Deadman_Gruppe.jpg" alt="anime" width="1000px">
+    			</div>
+    		<div class="item">
+      			<img src="borderlands.jpg" alt="videogame" width="1000px">
+    		</div>
+    		<div class="item">
+      			<img src="http://www.hdwallpapers.in/walls/guitor_abstract-normal.jpg" alt="bass" width="1000px">
+    		</div>
+  		</div>
 
   <!-- Controls -->
   <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
@@ -91,5 +81,8 @@
   </a>
 </div>
 	</div>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+
 </body>
 </html>>
