--- a/aboutme.html
+++ b/aboutme.html
@@ -62,13 +62,19 @@
   		<!-- Wrapper for slides -->
   		<div class="carousel-inner">
     		<div class="item active">
-      			<img src="http://img1.wikia.nocookie.net/__cb20130413211558/deadmanwonderland/de/images/thumb/4/4b/Deadman_Gruppe.jpg/670px-Deadman_Gruppe.jpg" alt="anime" width="1000px">
+      			<span class="img">
+      				<img src="http://img1.wikia.nocookie.net/__cb20130413211558/deadmanwonderland/de/images/thumb/4/4b/Deadman_Gruppe.jpg/670px-Deadman_Gruppe.jpg" alt="anime" class="img">
+      			</span>
     			</div>
     		<div class="item">
-      			<img src="borderlands.jpg" alt="videogame" width="1000px">
+      			<span class="img">
+      				<img src="borderlands.jpg" alt="videogame" class="img">
+      			</span>
     		</div>
     		<div class="item">
-      			<img src="http://www.hdwallpapers.in/walls/guitor_abstract-normal.jpg" alt="bass" width="1000px">
+      			<span class="img">
+      				<img src="http://www.hdwallpapers.in/walls/guitor_abstract-normal.jpg" alt="bass" class="img">
+      			</span>
     		</div>
   		</div>
 
