Initial project files
This is my portfolio version 2 project in my app academy class. It uses languages such as HTML and CSS to create a website.

--- a/aboutme.html
+++ b/aboutme.html
@@ -63,7 +63,7 @@
   		<div class="carousel-inner">
     		<div class="item active">
       			<span class="img">
-      				<img src="http://img1.wikia.nocookie.net/__cb20130413211558/deadmanwonderland/de/images/thumb/4/4b/Deadman_Gruppe.jpg/670px-Deadman_Gruppe.jpg" alt="anime" class="img">
+      				<img src="deadman.jpg" alt="anime" class="img">
       			</span>
     			</div>
     		<div class="item">
@@ -73,7 +73,7 @@
     		</div>
     		<div class="item">
       			<span class="img">
-      				<img src="http://www.hdwallpapers.in/walls/guitor_abstract-normal.jpg" alt="bass" class="img">
+      				<img src="bass.jpg" alt="bass" class="img">
       			</span>
     		</div>
   		</div>
