--- a/projects.html
+++ b/projects.html
@@ -1,57 +1,57 @@
 <!DOCTYPE <!DOCTYPE html>
 <html>
-<head>
-	<!-- bootstrap -->
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-	<!-- google fonts -->
-	<link href='http://fonts.googleapis.com/css?family=Shojumaru' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-	<!-- Stylesheets -->
-	<link rel="stylesheet" type="text/css" href="css/custom-style.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<!-- mediaquery -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Projects</title>
-</head>
+	<head>
+		<!-- bootstrap -->
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css">
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+		<!-- google fonts -->
+		<link href='http://fonts.googleapis.com/css?family=Shojumaru' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+		<!-- Stylesheets -->
+		<link rel="stylesheet" type="text/css" href="css/custom-style.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<!-- mediaquery -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Projects</title>
+	</head>
 <body>
-<div class="container">
-	<div class="row">			
-		<div class="about-me">
-			<p class="title">
-				<h1>Blake Dayman</h1>
-			</p>
+	<div class="container">
+		<div class="row">			
+			<div class="about-me">
+				<p class="title">
+					<h1>Blake Dayman</h1>
+				</p>
+			</div>
 		</div>
-	</div>
-	<!-- Navigation Links -->
-	<div class="col-xs-2">
-		<nav class="list-group">
-			<a class="list-group-item" href="index.html">Intro</a>
-			<a class="list-group-item" href="aboutme.html">About me</a>
-			<a class="list-group-item" href="projects.html">Projects</a>
-		</nav>
-	</div>
-	<div class="col-xs-10 about-me">
-		<p class="title">
-			<h1>Contact me</h1>
-		</p>
-		<div>
-			<p class="text2">
-				Phone: (626)434-5047 <br>
-				Address: 1140 coronet ave Pasadena CA
+		<!-- Navigation Links -->
+		<div class="col-xs-2">
+			<nav class="list-group">
+				<a class="list-group-item" href="index.html">Intro</a>
+				<a class="list-group-item" href="aboutme.html">About me</a>
+				<a class="list-group-item" href="projects.html">Projects</a>
+			</nav>
+		</div>
+		<div class="col-xs-10 about-me">
+			<p class="title">
+				<h1>Contact me</h1>
 			</p>
-		</div>		
-	</div>
-	<div class="col-xs-12 about-me">
-		<p class="title">
-			<h1>Projects</h1>
-		</p>
-	<div>
-		<p class="text2">
+			<div>
+				<p class="text2">
+					Phone: (626)434-5047 <br>
+					Address: 1140 coronet ave Pasadena CA
+				</p>
+			</div>		
+		</div>
+		<div class="col-xs-12 about-me">
+			<p class="title">
+				<h1>Projects</h1>
+			</p>
+			<div>
+				<p class="text2">
 			No projects to show yet but projects will come soon! Planning on to work on paralax!
-		</p>
-	</div>		
-	</div>
-</body>
-</html>>
+				</p>
+			</div>		
+		</div>
+	</body>
+</html>
